# pokedex-mlh-apighw

./: Makefile  README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html  oops.html
